# social-media

./: .dockerignore  .env.example  .gitignore  Cargo.toml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.markdown/: todo.md
apps/auth/: Cargo.toml  Dockerfile
apps/auth/src/: main.rs
apps/auth/src/session/: controllers.rs  mod.rs  router.rs  schemas.rs  test.rs
apps/auth/src/users/: controllers.rs  mod.rs  router.rs  schemas.rs
apps/mailer/: Cargo.toml  Dockerfile
apps/mailer/src/: main.rs
apps/messenger/: Cargo.toml  Dockerfile
apps/messenger/src/: main.rs
apps/web/: .prettierrc  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: router.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/auth/register/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/home/: page.tsx
apps/web/src/features/account/: schemas.ts
apps/web/src/features/auth/: actions.ts  context.tsx  schemas.ts
apps/web/src/lib/: axios.ts  types.ts
apps/web/src/lib/schemas/: rules.schemas.ts
config/: nginx.dev.conf  nginx.prod.conf  nginx.test.conf
libs/common/: Cargo.toml
libs/common/prisma/: schema.prisma
libs/common/src/: database.rs  http.rs  lib.rs  models.rs
libs/common/src/repositories/: mod.rs  session.rs  user.rs
libs/common/src/services/: auth.rs  jwt.rs  logger.rs  mod.rs  state.rs
libs/common/src/utils/: body.rs  cookies.rs  http.rs  mod.rs  request.rs  response.rs
libs/database/: Cargo.toml  Dockerfile
libs/database/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
libs/database/migrations/2025-02-11-023458_users_and_sessions/: down.sql  up.sql
libs/database/src/: lib.rs  models.rs  schema.rs
libs/prisma_cli/: Cargo.toml  Dockerfile  path_fix.sh
libs/sqlx/: Cargo.toml  Dockerfile  init-db.sh
libs/sqlx/migrations/: 20250217184316_add_users_table.sql  20250218153942_add_default_values.sql  20250218155240_update_timezones.sql  20250218214800_update_session_table.sql  20250319175024_add_posts_and_related.sql
libs/sqlx/src/: main.rs
