[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
common = { path = "../../libs/common" }
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
bcrypt = "0.17.0"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
axum-cookie = "0.2.2"
tower-cookies = "0.11.0"
