[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
    "postgresql",
] }
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
axum = "0.8.1"
async-trait = "0.1.86"
validator = "0.20.0"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "uuid",
    "chrono",
    "postgres",
    "derive",
] }
