[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
axum = "0.8.1"
async-trait = "0.1.86"
validator = "0.20.0"
bcrypt = "0.17.0"
uuid = { version = "1.13.1", features = ["serde", "v4"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "uuid",
    "chrono",
    "postgres",
    "derive",
] }
regex = "1.11.1"
tower-cookies = "0.11.0"
cookie-rs = "0.4.0"
