[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7" }
diesel-async = { version = "0.5.2", features = ["postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
