[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
common = { path = "../common" }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
bcrypt = "0.17.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "uuid",
    "chrono",
    "postgres",
    "derive",
] }
